--- a/swappy/src/swap/genericusers/templates/genericusers/admin.html
+++ b/swappy/src/swap/genericusers/templates/genericusers/admin.html
@@ -70,57 +70,87 @@
             </div>
         </div>
 
-        <!-- Search -->
+        <!-- Main content -->
 
         <div class="container" ng-controller="MasterController">
+
+            <!-- Separator -->
+
+            <div class="row">
+                <hr>
+            </div>
 
             <!-- Tabs -->
 
             <div class="row">
-
+                <ul class="nav nav-pills nav-justified">
+                  <li ng-class="tab == '1' ? 'active' : ''">
+                    <a ng-click="tab = '1'">Visualizar intermediarios</a></li>
+                  <li ng-class="tab == '2' ? 'active' : ''">
+                    <a ng-click="tab = '2'">Visualizar oferentes</a></li>
+                  <li ng-class="tab == '3' ? 'active' : ''">
+                    <a ng-click="tab = '3'">Visualizar inversores</a>
+                </li>
+                </ul>
             </div>
 
+            <!-- Separator -->
 
+            <div class="row">
+                <hr>
+            </div>
+
+            <!-- Content -->
+
+            {% verbatim %}
             <div class="row">
 
                 <!-- Passives -->
 
-                <div id="passives" ng-show="tab == 'passive'">
+                <div id="passives" ng-show="tab == '1'">
                     <h2>Intermediarios</h2>
-                    {% verbatim %}
-                    <div ng-show="passives.length == 0">
-                        <pre class="alert alert-danger">No hay registros</pre>
+                    <div ng-show="passives == null || passives.length == 0">
+                        <div class="alert alert-danger">No hay registros</div>
                         <hr>
                     </div>
-                    <div ng-repeat="of in offerants">{{ of }}</div>
-                    {% endverbatim %}
+                    <div ng-repeat="passive in passives" class="panel panel-default">
+                        <div class="panel-body">
+                            {{ passive }}
+                        </div>
+                    </div>
                 </div>
 
                 <!-- Offerants -->
 
-                <div id="offerants" ng-show="tab == 'offerant'">
+                <div id="offerants" ng-show="tab == '2'">
                     <h2>Oferentes</h2>
-                    <div ng-show="offerants.length == 0">
-                        {% verbatim %}
-                        <pre class="alert alert-danger">No hay registros</pre>
+                    <div ng-show="offerants == null || offerants.length == 0">
+                        <div class="alert alert-danger">No hay registros</div>
                         <hr>
-                        {% endverbatim %}
                     </div>
-                    <div ng-repeat="of in offerants">{{ of }}</div>
+                    <div ng-repeat="offerant in offerants" class="panel panel-default">
+                        <div class="panel-body">
+                            {{ offerant }}
+                        </div>
+                    </div>
                 </div>
 
                 <!-- Investors -->
 
-                <div id="invertors" ng-show="tab == 'investor'">
+                <div id="invertors" ng-show="tab == '3'">
                     <h2>Inversores</h2>
-                    <div ng-hide="investors.length == 0">
-                        {% verbatim %}
-                        <pre class="alert alert-danger">No hay registros</pre>
+                    <div ng-show="investors == null || investors.length == 0">
+                        <div class="alert alert-danger">No hay registros</div>
                         <hr>
-                        {% endverbatim %}
+                    </div>
+                    <div ng-repeat="investor in investors" class="panel panel-default">
+                        <div class="panel-body">
+                            {{ investor }}
+                        </div>
                     </div>
                 </div>
             </div>
+            {% endverbatim %}
 
             <!-- Separator -->
 
@@ -143,9 +173,9 @@
 
     <!-- JS scripts -->
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.4/angular.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.4/angular.min.js"></script>
     <script>
         var app = angular.module('app', []);
 
@@ -155,7 +185,7 @@
         }]);
 
         app.controller('MasterController', ['$scope', '$http', function($scope, $http) {
-            $scope.tab = 'passive';
+            $scope.tab = '1';
 
             $scope.passives = [];
 
@@ -165,7 +195,7 @@
 
             $http.get('/api/passives')
             .success(function(data) {
-                $scope.passives = data;
+                $scope.passives = data.passives;
             })
             .error(function(data) {
                 $scope.passives = [];
@@ -186,10 +216,6 @@
             .error(function(data) {
                 $scope.investors = [];
             });
-
-            $scope.setTab = function(tab) {
-                $scope.tab = tab;
-            };
         }]);
     </script>
 </body>
